--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+dataset/*
+loss_saved/*
+loss_val_saved/*
+network_model/*
+results/*
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
