--- a/configs/config.json
+++ b/configs/config.json
@@ -1,15 +1,13 @@
 {
     "path_dataset": "./dataset/",
-    "path_log": "./saved_files/enjoy_suffer/",
+    "path_log": "./saved_files/love_manifold_nonlinear/",
     "embedding_dims": 2,
     "batch_size": 32,
-    "epochs": 1,
+    "epochs": 10,
     "method": "distance_multiple_margins",
-    "class_names": ["suffered", "feared", "worried", "enjoying", "relaxed", "bored"],
-    "margin_matrix": [[0, 1, 1.414, 2.414, 3.318, 3.318],
-                      [1, 0, 1, 1.788, 2.573, 2.761],
-                      [1.414, 1, 0, 1, 1.932, 1.932],
-                      [2.414, 1.788, 1, 0, 1, 1],
-                      [3.318, 2.573, 1.932, 1, 0, 1],
-                      [3.318, 2.761, 1.932, 1, 1, 0]]
+    "class_names": ["hate", "dislike", "like", "love"],
+    "margin_matrix": [[0, 1, 1.848, 2.404],
+                      [1, 0, 1, 1.848],
+                      [1.848, 1, 0, 1],
+                      [2.404, 1.848, 1, 0]]
 }
